--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravelcollective/html": "^6.3",
+        "spatie/laravel-permission": "^5.5",
         "stancl/tenancy": "^3.6"
     },
     "require-dev": {
