editar de solicitudes

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+CLOUDINARY_URL=cloudinary://657793419414632:ba-P6xdnbJMcniaOnITru9dQTwQ@dq6hfne2i
+CLOUDINARY_UPLOAD_PRESET=657793419414632
+CLOUDINARY_NOTIFICATION_URL=ba-P6xdnbJMcniaOnITru9dQTwQ
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
